# active-breaks

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  main.spec  pyproject.toml  read_reminders.py  requirements-dev.txt  water.py
assets/: icon.icns
