[project]
name = "active-breaks"
version = "0.1.0"
description = "Maintain a healthy work-break balance by managing active breaks during work sessions."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["PyQt6"]

[dependency-groups]
dev = [
  "pre-commit",
  "autoflake",
  "pyupgrade",
  "pyinstaller",
]
